Changelog
=========

9.9-dev - (unreleased)
----------------------

9.8 - (2014-06-10)
------------------
* Feature: Added QR Box viewlet at the bottom of the content. Right now it's
  hidden from CSS and it can be enabled via custom CSS rules
  [voineali refs #19959]
* Change: removed short_colophon login since multimedia_view is no longer applied
  on site and the pdf output was complaining about getLayout call when using the
  main_template macros
  [ichimdav refs #19880]

9.7 - (2014-06-06)
------------------
* Feature: added eea-accordion-title-manual-icons class to the accordion logic
  to be used instead of eea-accordion-title class when we need to have different
  icons instead of the default ones provided by the accordion styles
  [ichimdav refs #19875]
* Change: Moved PDF export adapters and option makers as to eea.pdf
  [voineali refs #19882]
* Change: cleaned keyfacts-slider css implementation
  [ichimdav refs #19536]
* Change: navigation submenu is hidden if there are less than 2 of them since
  the new navigation design doesn't contain then at all.
  [ichimdav refs #19536]
* Change: updated portal navigation style based on the new design of soer2015
  [ichimdav refs #19536]
* Change: removed styles that were applied on selectors that are too agressive
  within eea-base.css, ploneCustom.css or eea-public.css.
  This way other styles can apply new styles instead of having to do overrides.
  See ticket for the exact changesets
  [ichimdav refs #19536]
* Change: last-child class is now applied through javascript to all eea-tabs not
  just those from the whatsnewgallery
  [ichimdav refs #19536]

9.6 - (2014-05-19)
------------------
* Change: EEA Tabs no longer detaches the tabs when performing it's tabs logic
  [ichimdav refs #19536]
* Feature: EEA Tabs will now load panel content with ajax requests if eea-tabs-ajax
  class is present
  [ichimdav refs #19536]
* Fix: make sure item is locked on edit page load
  [batradav refs #19405]

9.5 - (2014-05-13)