@@ -1,0 +1,2 @@
+[default]
+proxy = Manager, Owner, Authenticated, Anonymous, Editor, CommonEditor
