@@ -3,6 +3,9 @@ Changelog
 
 9.9-dev - (unreleased)
 ----------------------
+* Change: Copied check_id.py and check_id.py.metadata from eea.soercontent
+  in order to fix permissions
+  [voineali refs #20010]
 
 9.8 - (2014-06-10)
 ------------------
